manifests/mesh/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: camelk-gateway
  namespace: msauve-codeready
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "camelk.apps.ocp.myocp.net"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction
spec:
  hosts:
  - "*"
  gateways:
  - camelk-gateway
  http:
  - match:
    - uri:
        prefix: /camelk
    rewrite:
      uri: "/"
    route:
    - destination:
        host: transactionservice
        port:
          number: 80
