manifests/mesh/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: debitservice
spec:
  hosts:
  - debitservice
  http:
  - route:
    - destination:
        host: debitservice
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: creditservice
spec:
  hosts:
  - creditservice
  http:
  - route:
    - destination:
        host: creditservice
      weight: 100
